(test
 (name test_femtos)
 (libraries femtos))

(test
 (name test_ivar)
 (libraries femtos femtos_mux))

(test
 (name test_mvar)
 (libraries femtos femtos_mux))

(test
 (name test_mutex)
 (libraries femtos femtos_mux))

(test
 (name test_mutex_protect)
 (libraries femtos femtos_mux))

(test
 (name test_condition)
 (libraries femtos femtos_mux))

(test
 (name test_already_signaled)
 (libraries femtos femtos_mux))

(test
 (name test_control_flow)
 (libraries femtos femtos_mux))

(test
 (name test_scheduler_integration)
 (libraries femtos))

(test
 (name test_terminator)
 (libraries femtos))

(test
 (name test_terminator_advanced)
 (libraries femtos))

(test
 (name test_multicore_domains)
 (libraries femtos))

(test
 (name test_flock)
 (libraries femtos femtos_mux))

(test
 (name test_flock_already_signaled)
 (libraries femtos femtos_mux))

(test
 (name test_flock_cancellation)
 (libraries femtos femtos_mux unix))

(test
 (name test_explicit_cancellation)
 (libraries femtos femtos_mux))
